<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Nova Browser</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="reload">Reload</string>
    <string name="home">Home</string>
    <string name="bookmark">Bookmark</string>
    <string name="url_hint">Search or enter URL</string>
    <string name="new_tab">New tab</string>
    <string name="close_tab">Close tab</string>
</resources>
